Policy-Networking-Calico/NetworkPolicy/allow-busybox-egress.yaml
# Cho phép pod busbox có nhãn run=access trong namespace advanced-policy-demo được phép đi ra ngoài
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-busybox-egress
  namespace: advanced-policy-demo
spec:
  selector: run == 'access'
  types:
  - Egress
  egress:
  - action: Allow
    destination: {}
