Policy-Networking-Calico/NetworkPolicy/allow-nginx-ingress.yaml
# Cho phép pod có nhãn run=access được truy cập vào pod có app=nginx 
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-nginx-ingress
  namespace: advanced-policy-demo
spec:
  selector: app == 'app-secure'
  types:
  - Ingress
  ingress:
  - action: Allow
    source:
      selector: run == 'access'
    destination: {}
